Now, to configure, you do not need to specify a private key, but you need to specify a passphrase

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -95,7 +95,7 @@ pusher {
 
 subscribe-listener {
   address = ${?ADAMANT_FCM_ADAMANT_ADDRESS}
-  private-key = ${?ADAMANT_FCM_ADAMANT_PRIVATE_KEY}
+  passphrase = ${?ADAMANT_FCM_ADAMANT_PASSPHRASE}
 }
 
 nodes = [
